Ensure code blocks overflow scrolls.

--- a/_sass/_layout-single-post.scss
+++ b/_sass/_layout-single-post.scss
@@ -15,4 +15,7 @@
   h2 {
     padding-top: 1em;
   }
+  .highlighter-rogue {
+    overflow: auto;
+  }
 }
